# wirecell-kernel

./: CMakeLists.txt  README.md  build
Data/: CMakeLists.txt  FieldResp_U.txt  FieldResp_V.txt  FieldResp_W.txt  dune-garfield-1d565.root  garfield-1d-boundary-path-rev-dune.root
Doc/: wenqiang.txt
Root/: CMakeLists.txt  cesmearTH1.C  cesmearTpad.C  draw2dResponse.C  getResponseLabel.C  getWirecellFile.C  jsonToHist.C  makeResponseHisto.C  plotResponse.C  plotResponseInternal.C  plotResponseSymmetric.C  plotWirecell.C  rebinTpad.C
Script/: CMakeLists.txt  setup.sh.in  wckDraw2dResponse  wckPlot  wckPlotResponse  wirecell-kernel-help
